# dockerize_bottletube

./: .env.dev  Containerfile  Dockerfile  Readme.md  compose.yml  docker-compose.yml
.github/workflows/: container.yml
conf/: mod-wsgi.conf
img/: setup.drawio
src/: Readme.md  app.py  bottletube.py  pyproject.toml  requirements.txt
src/views/: delete.tpl  header.tpl  home.tpl  upload.tpl  upload_success.tpl
